# FileOps

./: .editorconfig  .gitattributes  .gitignore  .pylintrc  Makefile  README.md  mypy.ini  pyproject.toml  requirements.txt
.github/workflows/: build.yml  test.yml
scripts/: build.ps1  build.sh  lint.ps1  lint.sh  run.ps1  run.sh  setup.ps1  setup.sh  test.ps1  test.sh  validate.ps1  validate.sh
src/file_ops/: __main__.py  app.py
tests/: test_send.py
